Move basic protocol to samples