@@ -437,126 +437,6 @@
         </path>
     </target>
 
-    <!-- protocol.basic module -->
-
-    <target name="protocol.basic.compile.depcheck">
-        <mkdir dir="protocol/basic/target/main"/>
-        <uptodate property="protocol/basic.compile.uptodate" targetfile="protocol/basic/target/main/.lastcompile">
-            <srcfiles dir="protocol/basic/src/main/java">
-                <include name="**/"/>
-                <include name="**/*.java"/>
-                <exclude name="**/.*"/>
-            </srcfiles>
-        </uptodate>
-    </target>
-
-    <target name="protocol.basic.compile" depends="protocol.basic.compile.depcheck" unless="protocol.basic.compile.uptodate">
-        <mkdir dir="protocol/basic/target/main/classes"/>
-        <javac
-                source="${javac.source}"
-                target="${javac.target}"
-                srcdir="protocol/basic/src/main/java"
-                destdir="protocol/basic/target/main/classes"
-                debug="true">
-            <compilerarg value="-Xlint:unchecked"/>
-            <classpath>
-                <path refid="api.classpath"/>
-                <path refid="core.classpath"/>
-            </classpath>
-        </javac>
-        <touch file="protocol/basic/target/main/.lastcompile" verbose="false"/>
-    </target>
-
-    <target name="protocol.basic.test.compile.depcheck">
-        <mkdir dir="protocol/basic/target/test"/>
-        <uptodate property="protocol.basic.compile.uptodate" targetfile="protocol/basic/target/test/.lastcompile">
-            <srcfiles dir="protocol/basic/src/test/java">
-                <include name="**/"/>
-                <include name="**/*.java"/>
-                <exclude name="**/.*"/>
-            </srcfiles>
-        </uptodate>
-    </target>
-
-    <target name="protocol.basic.test.compile" depends="lib.junit,protocol.basic.compile,protocol.basic.test.compile.depcheck" unless="protocol.basic.test.compile.uptodate">
-        <mkdir dir="protocol/basic/target/test/classes"/>
-        <javac
-                source="${javac.source}"
-                target="${javac.target}"
-                srcdir="protocol/basic/src/test/java"
-                destdir="protocol/basic/target/test/classes"
-                debug="true">
-            <compilerarg value="-Xlint:unchecked"/>
-            <classpath>
-                <path refid="api.classpath"/>
-                <path refid="core.classpath"/>
-                <path refid="protocol.basic.classpath"/>
-                <path refid="testing-support.classpath"/>
-                <path refid="lib.junit.classpath"/>
-                <path refid="lib.river.classpath"/>
-                <path refid="lib.xnio-nio.classpath"/>
-            </classpath>
-        </javac>
-        <touch file="protocol/basic/target/test/.lastcompile" verbose="false"/>
-    </target>
-
-    <target name="protocol.basic.test.pseudotarget">
-        <echo message="============================================="/>
-        <echo message="${message}"/>
-        <echo message="============================================="/>
-        <mkdir dir="protocol/basic/target/test-results"/>
-        <junit printsummary="true" fork="yes" includeantruntime="true">
-            <sysproperty key="build.home" value="${basedir}"/>
-            <sysproperty key="ant.library.dir" value="${ant.home}/lib"/>
-            <sysproperty key="lib.junit.local" value="${lib.junit.local}"/>
-            <sysproperty key="lib.marshalling-api.local" value="${lib.marshalling-api.local}"/>
-            <sysproperty key="lib.river.local" value="${lib.river.local}"/>
-            <sysproperty key="lib.xnio-api.local" value="${lib.xnio-api.local}"/>
-            <sysproperty key="lib.xnio-nio.local" value="${lib.xnio-nio.local}"/>
-            <jvmarg line="${test.jvmargs}"/>
-            <formatter type="plain" extension="${extension}"/>
-            <classpath>
-                <path refid="api.classpath"/>
-                <path refid="core.classpath"/>
-                <path refid="protocol.basic.classpath"/>
-                <path refid="testing-support.classpath"/>
-                <pathelement location="protocol/basic/target/test/classes"/>
-                <path refid="lib.junit.classpath"/>
-                <path refid="lib.river.classpath"/>
-                <path refid="lib.xnio-nio.classpath"/>
-            </classpath>
-            <batchtest fork="yes" todir="protocol/basic/target/test-results"
-                       haltonfailure="no">
-               <fileset dir="protocol/basic/target/test/classes">
-                   <include name="**/*TestCase.class"/>
-               </fileset>
-            </batchtest>
-        </junit>
-    </target>
-
-    <target name="protocol.basic.test" depends="lib.river,lib.xnio-nio,api,core,protocol.basic,testing-support,protocol.basic.test.compile">
-        <antcall inheritall="true" inheritrefs="true" target="protocol.basic.test.pseudotarget">
-            <param name="extension" value=".txt"/>
-            <param name="message" value="Running with no security manager"/>
-            <param name="test.jvmargs" value="-Ddummy=dummy"/>
-        </antcall>
-        <antcall inheritall="true" inheritrefs="true" target="protocol.basic.test.pseudotarget">
-            <param name="extension" value="-security.txt"/>
-            <param name="message" value="Running with security manager"/>
-            <param name="test.jvmargs" value="-Djava.security.manager=org.jboss.remoting.test.support.LoggingSecurityManager -Djava.security.policy=${basedir}/testing-support/src/main/resources/testing.policy -Dsecurity.debug=policy"/>
-        </antcall>
-    </target>
-
-    <target name="protocol.basic.clean">
-        <delete dir="protocol/basic/target"/>
-    </target>
-
-    <target name="protocol.basic" description="Build the protocol.basic module" depends="lib.xnio-api,api,core,protocol.basic.compile">
-        <path id="protocol.basic.classpath">
-            <pathelement location="protocol/basic/target/main/classes"/>
-        </path>
-    </target>
-
     <!-- samples module -->
 
     <target name="samples.compile.depcheck">
@@ -781,7 +661,7 @@
 
     <!-- core -->
 
-    <target name="all-core" description="Build all core targets" depends="api,core,protocol.basic,protocol.multiplex,samples,testing-support"/>
+    <target name="all-core" description="Build all core targets" depends="api,core,protocol.multiplex,samples,testing-support"/>
 
     <!-- JARs: These should be the second-to-last targets in the file -->
 
@@ -791,8 +671,8 @@
 
     <target name="all" description="Build everything" depends="all-core,all-jars,api-javadoc"/>
 
-    <target name="clean" description="Clean out all build files" depends="api.clean,core.clean,protocol.basic.clean,protocol.multiplex.clean,samples.clean,testing-support.clean"/>
+    <target name="clean" description="Clean out all build files" depends="api.clean,core.clean,protocol.multiplex.clean,samples.clean,testing-support.clean"/>
 
-    <target name="test" description="Run all tests" depends="api.test,core.test,protocol.basic.test,protocol.multiplex.test"/>
+    <target name="test" description="Run all tests" depends="api.test,core.test,protocol.multiplex.test"/>
 
 </project>
